# arkanoid-clone

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  annotated.html  classes.html  codecov.yml  components_8h.html  components_8h_source.html  constants_8h.html  constants_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dprint.json  entities_8h.html  entities_8h_source.html  file__system_8h_source.html  files.html  functions.html  functions_func.html  functions_vars.html  genindex.html  globals.html  globals_enum.html  index.html  objects.inv  queries_8h_source.html  requirements.txt  resources_8h_source.html  search.html  searchindex.js  structAudible-members.html  structAudible.html  structAxisAlignedOneWayCollider-members.html  structAxisAlignedOneWayCollider.html  structBall.html  structBrick.html  structCircleComponent-members.html  structCircleComponent.html  structCollisionBox-members.html  structCollisionBox.html  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codecov.yml  codeql.yml  dependency-review.yml  documentation.yml  links.yml  macos.yml  pre-commit.yml  scorecard.yml  typos.yml  ubuntu.yml  windows.yml
Catch_tests/: BallTests.cpp  CMakeLists.txt  ComponentTests.cpp  PaddleTests.cpp  entities.cpp  systems.cpp
Catch_tests/components/: CMakeLists.txt  rectangle.cpp
Catch_tests/entities/: CMakeLists.txt  ball.cpp  bricks.cpp  paddle.cpp
assets/: level_bricks.json
cmake/: FindSphinx.cmake  StaticAnalysers.cmake  coverage.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  searchdata.js  variables_0.js
src/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Manager.cpp  Manager.h  Paddle.cpp  Paddle.h  Rectangle.cpp  Rectangle.h  araknoid.cpp  arkanoid.cpp  components.cpp  components.h  constants.h  entities.cpp  entities.h  file_system.cpp  file_system.h  main.cpp  queries.h  resources.h  systems.cpp  systems.h  templates.cpp  utility.h
